[project]
name = "simple-project-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "marimo>=0.15.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "ruff>=0.12.11",
]

[tool.uv.sources]
simple_project_setup = {path = "src"}

[tool.ruff]
line-length = 78
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []


[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[build-system]
requires = ["uv-build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
