[project]
name = "rag-cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "langchain-ollama>=0.3.6",
    "llama-index>=0.12.49",
    "llama-index-embeddings-fastembed>=0.3.5",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "nvitop>=1.5.1",
    "qdrant-client>=1.14.3",
    "ragas==0.3.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "unstructured>=0.18.11",
]
