[project]
name = "raggie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "einops>=0.8.1",
    "google-genai>=1.32.0",
    "ipykernel>=6.29.5",
    "langchain-ollama>=0.3.6",
    "llama-index>=0.12.49",
    "llama-index-embeddings-fastembed>=0.3.5",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "marimo>=0.15.1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "nvitop>=1.5.1",
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pi-heif>=1.1.0",
    "pillow>=11.3.0",
    "poppler-utils>=0.1.0",
    "qdrant-client>=1.14.3",
    "ragas==0.3.0",
    "ruff>=0.12.11",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "ty>=0.0.1a19",
    "unstructured>=0.18.11",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
]
[tool.uv.sources]
raggie = {path = "src/raggie"}

[tool.ruff]
line-length = 78
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []


[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[tool.marimo.runtime]
output_max_bytes = 60_000_000

[build-system]
requires = ["uv-build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
