[project]
name = "raggie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets==3.6.0",
    "einops==0.8.1",
    "google-genai==1.42.0",
    "ipykernel==6.30.1",
    "ipython>=9.6.0",
    "langchain-ollama==0.3.10",
    "llama-index==0.14.4",
    "llama-index-embeddings-fastembed==0.5.0",
    "llama-index-embeddings-huggingface==0.6.1",
    "llama-index-embeddings-ollama==0.8.3",
    "llama-index-llms-ollama==0.8.0",
    "llama-index-vector-stores-qdrant==0.8.6",
    "marimo==0.16.5",
    "matplotlib==3.10.7",
    "nbformat==5.10.4",
    "nvitop==1.5.3",
    "opencv-python==4.12.0.88",
    "pdf2image==1.17.0",
    "pdfminer-six==20250506",
    "pi-heif==1.1.1",
    "pillow==11.3.0",
    "poppler-utils==0.1.0",
    "qdrant-client==1.15.1",
    "ragas==0.3.0",
    "ruff==0.14.0",
    "torch==2.8.0",
    "transformers==4.57.1",
    "ty==0.0.1a21",
    "unstructured==0.18.15",
    "unstructured-inference==1.0.5",
    "unstructured-pytesseract==0.3.15",
    "yfinance>=0.2.66",
]
[tool.uv.sources]
raggie = {path = "src/raggie"}

[tool.ruff]
line-length = 78
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []


[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[tool.marimo.runtime]
output_max_bytes = 60_000_000

[build-system]
requires = ["uv-build>=0.8.0,<0.9.0"]
build-backend = "uv_build"
